<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_bg_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:scaleType="fitXY"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:src="@drawable/icon_p" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dip"
            android:text="@string/app_name"
            android:textColor="@color/text_color_main"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_non_group"
        android:layout_width="200dip"
        android:layout_height="70dip"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/btn_bg_drawable"
        android:padding="20dip"
        android:text="@string/nonGroupActivity"
        android:textColor="#ffffffff"
        />

    <Button
        android:id="@+id/btn_group"
        android:layout_width="200dip"
        android:layout_height="70dip"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_bg_drawable"
        android:padding="20dip"
        android:text="@string/GroupActivity"
        android:textColor="#ffffffff"
         />

    <Button
        android:id="@+id/btn_travel"
        android:layout_width="200dip"
        android:layout_height="70dip"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_bg_drawable"
        android:padding="20dip"
        android:text="@string/travelActivity"
        android:textColor="#ffffffff"
         />
    
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingLeft="1dip"
        android:paddingRight="1dip"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip" >
        <LinearLayout
            android:id="@+id/bg_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dip"
        android:text="@string/version" />

</LinearLayout>