<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/info_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:singleLine="true"
                android:textSize="12sp"
                android:paddingLeft="3dip" />

            <EditText
                android:id="@+id/name"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_drawable"
                android:gravity="left"
                android:inputType="text"
                android:padding="3dip"
                android:textSize="13sp"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attend"
                    android:textSize="10sp"
                    android:textColor="@color/text_color_main" />

                <CheckBox
                    android:id="@+id/chbox_attend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dip"
                    android:checked="true"
                    android:textColor="@color/text_color_main" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:paddingLeft="1dip"
                android:paddingRight="1dip" >
                <LinearLayout
                    android:id="@+id/chbox_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingRight="3dip" >

            <TextView
                android:id="@+id/btn_delete_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:background="@drawable/btn_bg_drawable"
                android:clickable="true"
                android:onClick="removeMember"
                android:padding="2dip"
                android:text="@string/delete"
                android:textSize="13sp"
                android:textColor="@color/text_color_main"
                
                 />

            <TextView
                android:id="@+id/btn_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_drawable"
                android:clickable="true"
                android:onClick="addAccount"
                android:padding="2dip"
                android:text="@string/account"
                android:textSize="13sp" 
                android:textColor="@color/text_color_main"
                />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>