<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/group_bg_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- title -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@color/title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left|center_vertical"
            android:paddingLeft="8dip"
            android:text="@string/GroupActivity"
            android:textColor="@color/text_color_main"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="1dip"
        android:background="#ffffff" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="2dip"
        android:layout_marginTop="2dip" >

        <Spinner
            android:id="@+id/group_spinner"
            android:layout_width="120dip"
            android:layout_height="40dip"
            android:layout_gravity="left|start|center_vertical"
            android:layout_marginLeft="4dip"
            android:background="@drawable/spinner_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end|center_vertical"
            android:layout_marginRight="4dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dip"
                    android:text="@string/group"
                    android:textColor="@color/text_color_main"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="25dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dip"
                        android:background="@drawable/btn_bg_drawable"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="addGroup"
                        android:padding="2dip"
                        android:text="+"
                        android:textColor="@color/text_color_main"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="25dip"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_bg_drawable"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="removeGroup"
                        android:padding="2dip"
                        android:text="-"
                        android:textColor="@color/text_color_main"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dip"
                    android:text="@string/member"
                    android:textColor="@color/text_color_main"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="25dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dip"
                        android:background="@drawable/btn_bg_drawable"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="addMember"
                        android:padding="2dip"
                        android:text="+"
                        android:textColor="@color/text_color_main"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_bg_drawable"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="saveMember"
                        android:padding="2dip"
                        android:text="Save"
                        android:textColor="@color/text_color_main"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView_member"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:layout_marginTop="3dip"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#ffffff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="1dip"
            android:background="#ffffff" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dip"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/addMeeting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="8dip"
                        android:background="@drawable/btn_bg_drawable"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="addMeeting"
                        android:padding="3dip"
                        android:textColor="@color/text_color_main"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/removeMeeting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="8dip"
                        android:background="@drawable/btn_bg_drawable"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="removeMetting"
                        android:padding="3dip"
                        android:textColor="@color/text_color_main"
                        android:textSize="14sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:gravity="bottom|left"
                        android:paddingBottom="2dip"
                        android:paddingLeft="8dip"
                        android:text="@string/info_group_attendCnt"
                        android:textColor="@color/text_color_sub"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mettings_g"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip"
                    android:orientation="vertical" >
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="#ffffff" />

                <Button
                    android:id="@+id/btn_enter_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="8dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/btn_bg_drawable"
                    android:gravity="center"
                    android:text="@string/cal"
                    android:textColor="@color/text_color_main"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/result_layout_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal"
                    android:visibility="invisible" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|center_horizontal"
                        android:paddingLeft="8dip"
                        android:text="@string/result"
                        android:textColor="@color/text_color_main"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|center_horizontal"
                        android:paddingLeft="8dip"
                        android:text="@string/result_sub"
                        android:textColor="@color/text_color_sub"
                        android:textSize="12sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_text_result_text_g"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="8dip"
                    android:layout_marginRight="8dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/btn_bg_drawable"
                    android:gravity="left"
                    android:inputType="textMultiLine"
                    android:padding="5dip"
                    android:textColor="@color/text_color_main"
                    android:textSize="13sp"
                    android:visibility="invisible" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-7659444355995967/4336759332" />
    </LinearLayout>

</LinearLayout>